--- a/src/app/pages/dashboard/add-escrow/add-escrow.component.html
+++ b/src/app/pages/dashboard/add-escrow/add-escrow.component.html
@@ -1,16 +1,16 @@
 <div class="wrapper">
     <nav class="navbar navbar-dark bg-dark d-lg-none">
         <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#responsiveSidebar">
-                <span class="navbar-toggler-icon"></span>
+            <button *ngFor="let tab of tabs" class="nav-link"
+                [ngClass]="{ active: selectedTab === tab.key, disabled: !enabledTabs[tab.key] }"
+                [disabled]="!enabledTabs[tab.key]" (click)="selectTab(tab.key)" type="button">
+                {{ tab.label }}
             </button>
         </div>
     </nav>
-
-    <!-- Main Wrapper -->
     <div class="main-container">
         <div class="topbar p-3 border-bottom">
-            <h5 class="text-primary m-0">{{ selectedService | titlecase}} Escrow</h5>
+            <h5 class="text-primary m-0">{{ selectedService }} Escrow</h5>
         </div>
 
         <div class="content-inside m-3">
@@ -23,15 +23,18 @@
                 </div>
 
                 <div class="tab-content w-100">
-                    <div *ngFor="let tab of tabs" class="tab-pane fade"
-                        [ngClass]="{ 'show active': selectedTab === tab.key }">
-                        <ng-container [ngSwitch]="tab.key">
-                            <div *ngSwitchCase="'basic'"><app-basic-details></app-basic-details></div>
-                            <div *ngSwitchCase="'agreement'"><app-agreement></app-agreement></div>
-                            <div *ngSwitchCase="'deposit'"><app-deposit></app-deposit></div>
-                            <div *ngSwitchCase="'release'"><app-release-condition></app-release-condition></div>
-                        </ng-container>
-                    </div>
+                 <div *ngFor="let tab of tabs" class="tab-pane fade"
+                    [ngClass]="{ 'show active': selectedTab === tab.key }">
+                    <ng-container [ngSwitch]="tab.key">
+                        <div *ngSwitchCase="'basic'"><app-basic-details
+                                (completed)="enableNextTab('basic')"></app-basic-details></div>
+                        <div *ngSwitchCase="'agreement'"><app-agreement
+                                (completed)="enableNextTab('agreement')"></app-agreement></div>
+                        <div *ngSwitchCase="'deposit'"><app-deposit
+                                (completed)="enableNextTab('deposit')"></app-deposit></div>
+                        <div *ngSwitchCase="'release'"><app-release-condition></app-release-condition></div>
+                    </ng-container>
+                </div>
                 </div>
             </div>
         </div>
