--- a/src/app/pages/dashboard/add-escrow/basic-details/basic-details.component.html
+++ b/src/app/pages/dashboard/add-escrow/basic-details/basic-details.component.html
@@ -1,42 +1,71 @@
 <div class="row g-4">
   <div class="col-md-6" *ngFor="let item of serviceOptions">
     <div class="service-card p-4 shadow-sm rounded-3 h-100 border" role="button" (click)="onSelect(item.key)">
-      <div class="d-flex align-items-center gap-3">
-        <img [src]="item.icon" width="40" />
-        <div>
-          <h5 class="mb-1">{{ item.title }}</h5>
-          <p class="text-muted mb-0">{{ item.description }}</p>
-        </div>
-      </div>
-
-      <div class="mt-3">
-        <ng-container [ngSwitch]="item.key">
-          <ng-container *ngSwitchCase="'depositor'">
-            <div *ngIf="depositor; else showAdd">
-              <p class="mb-1">Depositor: {{ depositor.name }}</p>
-              <button type="button" class="btn btn-outline-secondary btn-sm">Edit</button>
+      <ng-container [ngSwitch]="item.key">
+        <ng-container *ngSwitchCase="'depositor'">
+          <ng-container *ngIf="!(depositorId && depositor); else showEditDepositor">
+            <div class="d-flex align-items-center gap-3">
+              <img [src]="item.icon" width="40" />
+              <div>
+                <h5 class="mb-1">{{ item.title }}</h5>
+                <p class="text-muted mb-0">{{ item.description }}</p>
+              </div>
             </div>
-          </ng-container>
-
-          <ng-container *ngSwitchCase="'beneficiary'">
-            <div *ngIf="beneficiary; else showAdd">
-              <p class="mb-1">Beneficiary: {{ beneficiary.name }}</p>
-              <button type="button" class="btn btn-outline-secondary btn-sm">Edit</button>
+            <div class="mt-3">
+              <button type="button" class="btn btn-outline-primary btn-sm">
+                {{ item.title }}
+              </button>
             </div>
           </ng-container>
         </ng-container>
 
-        <ng-template #showAdd>
-          <button type="button" class="btn btn-outline-primary btn-sm"> {{ item.title }}</button>
-        </ng-template>
-      </div>
+        <ng-container *ngSwitchCase="'beneficiary'">
+          <ng-container *ngIf="!(beneId && beneficiary); else showEditBeneficiary">
+            <div class="d-flex align-items-center gap-3">
+              <img [src]="item.icon" width="40" />
+              <div>
+                <h5 class="mb-1">{{ item.title }}</h5>
+                <p class="text-muted mb-0">{{ item.description }}</p>
+              </div>
+            </div>
+            <div class="mt-3">
+              <button type="button" class="btn btn-outline-primary btn-sm">
+                {{ item.title }}
+              </button>
+            </div>
+          </ng-container>
+        </ng-container>
+
+      </ng-container>
+
+      <ng-template #showEditDepositor>
+        <div class="mt-3">
+          <h3>Depositor Details</h3>
+          <p class="mb-1">Depositor Company Name: {{ depositor.company_name }}</p>
+          <p class="mb-1">Depositor Company PAN: {{ depositor.company_pan }}</p>
+          <p class="mb-1">Depositor CIN: {{ depositor.company_cin }}</p>
+          <button type="button" class="btn btn-outline-secondary btn-sm" >
+            Edit
+          </button>
+        </div>
+      </ng-template>
+
+      <ng-template #showEditBeneficiary>
+        <div class="mt-3">
+          <h3>Beneficiary Details</h3>
+          <p class="mb-1">Company Name: {{ beneficiary.company_name }}</p>
+          <p class="mb-1">Company PAN: {{ beneficiary.company_pan }}</p>
+          <p class="mb-1">Company CIN: {{ beneficiary.company_cin }}</p>
+          <button type="button" class="btn btn-outline-secondary btn-sm">
+            Edit
+          </button>
+        </div>
+      </ng-template>
 
     </div>
   </div>
-        <div class="col-12 mt-3">
-            <button class="btn btn-dark" type="submit" (click)="submit()">Submit</button>
-        </div>
+
+  <div class="col-12 mt-3">
+    <button class="btn btn-dark" type="button" (click)="submit()">Next</button>
+  </div>
 </div>
-
-
-
