--- a/src/app/pages/dashboard/add-escrow/add-escrow.component.html
+++ b/src/app/pages/dashboard/add-escrow/add-escrow.component.html
@@ -9,7 +9,7 @@
         </div>
     </nav>
     <div class="main-container">
-        <div class="topbar p-3 border-bottom">
+        <div class="topbar">
             <h5 class="text-primary m-0">{{ selectedService }} Escrow</h5>
         </div>
 
