--- a/src/assets/scss/components/_buttons.scss
+++ b/src/assets/scss/components/_buttons.scss
@@ -31,7 +31,7 @@
     background: $white;
     color:#808080;
     font-weight: $bold;
-   border: 2px solid #E6EFF5;
+   border: 2px solid $gray4;
     &:hover {
       background: $dark-blue;
       color:$white;
