--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,3 +1,4 @@
+<section class="login-sec">
 <div class="row">
   <div class="col-12 col-lg-6 col-xl-6 login-left">
     <div class="logo"><img src="assets/img/logo.png" width="300" alt="SprintExcode"></div>
@@ -55,5 +56,6 @@
     <router-outlet></router-outlet>
   </div>
 </div>
+
 
 
