--- a/src/app/pages/dashboard/dashboard-list/dashboard-list.component.html
+++ b/src/app/pages/dashboard/dashboard-list/dashboard-list.component.html
@@ -86,7 +86,7 @@
               </select>
             </div>
           </div>
-          <div>
+          <div class="d-flex gap-3">
             <button class="btn btn-primary">Submit</button>
             <button class="btn btn-white"><span><img src="assets/img/edit.png" class="pe-3"></span>Clear</button>
           </div>
@@ -94,8 +94,11 @@
         </form>
 
       </div>
-      <h5 class="mt-3 text-primary">Your Escrow Deposits</h5>
+      <div class="d-flex justify-content-between my-3">
+           <h5 class="mt-3 text-primary">Your Escrow Deposits</h5>
            <button class="btn btn-primary" (click)="addNew()">Add New</button>
+      </div>
+   
       <div class="deposit-table mt-3">
         <table class="table">
           <thead>
