--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,8 @@
 input[readonly],
 textarea[readonly] {
-  background-color: #f5f5f5;
-  color: #6c757d;
+  color:#808080;
   cursor: not-allowed;
+      font-weight: 400;
 }/* You can add global styles to this file, and also import other style files */
 
 .floating-label.fltLbValid label {
