--- a/src/app/pages/dashboard/add-escrow/basic-details/basic-details.component.html
+++ b/src/app/pages/dashboard/add-escrow/basic-details/basic-details.component.html
@@ -4,35 +4,27 @@
       <ng-container [ngSwitch]="item.key">
         <ng-container *ngSwitchCase="'depositor'">
           <ng-container *ngIf="!(depositorId && depositor); else showEditDepositor">
-            <div class="d-flex align-items-center gap-3">
-              <img [src]="item.icon" width="40" />
+            <div>
+              <img [src]="item.icon" class="mb-2"/>
               <div>
                 <h5 class="mb-1">{{ item.title }}</h5>
                 <p class="text-muted mb-0">{{ item.description }}</p>
               </div>
             </div>
-            <div class="mt-3">
-              <button type="button" class="btn btn-outline-primary btn-sm">
-                {{ item.title }}
-              </button>
-            </div>
+
           </ng-container>
         </ng-container>
 
         <ng-container *ngSwitchCase="'beneficiary'">
           <ng-container *ngIf="!(beneId && beneficiary); else showEditBeneficiary">
-            <div class="d-flex align-items-center gap-3">
-              <img [src]="item.icon" width="40" />
+            <div>
+              <img [src]="item.icon" class="mb-2"/>
               <div>
                 <h5 class="mb-1">{{ item.title }}</h5>
                 <p class="text-muted mb-0">{{ item.description }}</p>
               </div>
             </div>
-            <div class="mt-3">
-              <button type="button" class="btn btn-outline-primary btn-sm">
-                {{ item.title }}
-              </button>
-            </div>
+
           </ng-container>
         </ng-container>
 
@@ -66,6 +58,6 @@
   </div>
 
   <div class="col-12 mt-3">
-    <button class="btn btn-dark" type="button" (click)="submit()">Next</button>
+    <button class="btn btn-primary" type="button" (click)="submit()">Next</button>
   </div>
 </div>
