--- a/src/app/pages/dashboard/select-service/select-service.component.html
+++ b/src/app/pages/dashboard/select-service/select-service.component.html
@@ -21,7 +21,7 @@
         'border-light': selectedService !== service.key
       }" (click)="selectService(service.key)" role="button">
                         <div class="">
-                            <img [src]="service.icon" alt="" />
+                            <img [src]="service.icon" alt="sprint excode" />
                             <div>
                                 <h5 class="my-2">{{ service.name }}</h5>
                                 <p class="text-muted mb-0">{{ service.description }}</p>
