--- a/src/assets/scss/base/_forms.scss
+++ b/src/assets/scss/base/_forms.scss
@@ -15,6 +15,7 @@ form {
 label {
   font-weight: $medium;
   font-size: 16px;
+      margin-bottom: 10px;
 
   &.form-check-label {
     font-family: $font-primary;
@@ -33,7 +34,7 @@ input {
   font-weight: $medium;
   font-size: 16px;
   letter-spacing: 0.3px;
-border: 1px solid $border;
+border:1px solid #E6EFF5;
   padding: 12px 15px;
   line-height: 1.5;
   height: auto;
