--- a/src/app/pages/dashboard/add-escrow/add-escrow.component.html
+++ b/src/app/pages/dashboard/add-escrow/add-escrow.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-    <nav class="navbar navbar-dark bg-dark d-lg-none">
+    <!-- <nav class="navbar navbar-dark bg-dark d-lg-none">
         <div class="container-fluid">
             <button *ngFor="let tab of tabs" class="nav-link"
                 [ngClass]="{ active: selectedTab === tab.key, disabled: !enabledTabs[tab.key] }"
@@ -7,7 +7,7 @@
                 {{ tab.label }}
             </button>
         </div>
-    </nav>
+    </nav> -->
     <div class="main-container">
         <div class="topbar">
             <h5 class="text-primary m-0">{{ selectedService }} Escrow</h5>
