--- a/src/app/pages/dashboard/add-escrow/deposit-physical/deposit-physical.component.html
+++ b/src/app/pages/dashboard/add-escrow/deposit-physical/deposit-physical.component.html
@@ -12,13 +12,18 @@
         </div>
 
         <div class="col-md-6">
-            <div class="form-group">
-            <label>Depositing Person Mobile Number</label>
-            <input formControlName="depositor_mobile" type="tel" class="form-control"
+             <div class="form-group">
+                  <label>Depositing Person Mobile Number</label>
+            <div class="input-group mb-3">
+  <span class="input-group-text me-0" id="basic-addon1">+91</span>
+  <input formControlName="depositor_mobile" type="tel" class="form-control"
                  [appInputRestriction]="'integer'" maxlength="10" placeholder="Enter Mobile Number" />
-            <app-show-errors [ctrl]="depositForm.get('depositor_mobile')" [requiredMesg]="'Mobile Number is Required'">
+     
+</div>
+               <app-show-errors [ctrl]="depositForm.get('depositor_mobile')" [requiredMesg]="'Mobile Number is Required'">
             </app-show-errors>
-            </div>
+</div>
+
         </div>
 
         <div class="col-md-6">
@@ -67,7 +72,7 @@
             </app-show-errors>
             </div>
         </div>
-        <div class="col-md-6">
+        <!-- <div class="col-md-6">
                <div class="form-group">
             <label>KYC of Depositing Person</label>
              <input  [appInputRestriction]="'alphanumeric'" formControlName="kyc" class="form-control" placeholder="Enter KYC of Depositing Person" />
@@ -75,7 +80,7 @@
                 [requiredMesg]="'KYC of Depositing Person is Required'">
             </app-show-errors>
             </div>
-        </div>
+        </div> -->
 
         <ng-container *ngFor="let field of fileFields">
                
@@ -89,7 +94,7 @@
                 </app-show-errors>
                 </div> -->
 
-<div>
+<div class="position-relative">
                 <label class="custom-file-upload">
  <img src="assets/img/upload.png" class="me-2"> {{ field.label }}
 </label>
