--- a/src/app/pages/dashboard/add-escrow/release-condition/release-condition.component.html
+++ b/src/app/pages/dashboard/add-escrow/release-condition/release-condition.component.html
@@ -1,31 +1,42 @@
-<div class="container mt-4">
-    <h5>Choose the agreed-upon conditions between you and your counterparty.</h5>
+<div class="row">
+    <p>Choose the agreed-upon conditions between you and your counterparty. The material will be released only after
+        these events occur and all parties have completed a thorough review.</p>
+
     <div class="mb-3">
-        <label><strong>Upload Document</strong></label>
-        <input #fileInput type="file" class="form-control" (change)="onFileUpload($event, fileInput)" />
-          <app-show-errors [ctrl]="releaseForm.get('document')"
-            [requiredMesg]="'Document is required'">
-        </app-show-errors>
-        <small class="text-muted">File size must be less than 5MB</small>
+        <div class="upload-doc position-relative w-50">
+            <label class="custom-file-upload">
+                <img src="assets/img/upload.png" class="me-2">
+                <div class="d-flex flex-column">
+                    Upload Document
+                    <small class="text-muted mb-0">File size must be less than 5MB</small>
+                </div>
+            </label>
+            <input type="file" id="fileInput" #fileInput class="form-control"
+                (change)="onFileUpload($event, fileInput)" />
+
+            <app-show-errors [ctrl]="releaseForm.get('document')" [requiredMesg]="'Document is required'">
+            </app-show-errors>
+        </div>
 
         <p class="mb-1" *ngIf="releaseForm.get('document')?.value">
             <a [href]="releaseForm.get('document')?.value" target="_blank" class="text-decoration-none">
                 👁️ View Uploaded Document
             </a>
-            <button type="button" class="btn btn-outline-danger btn-sm"
-                (click)="removeUploadedDocument()">
+            <button type="button" class="btn btn-outline-danger btn-sm" (click)="removeUploadedDocument()">
                 Remove
             </button>
         </p>
     </div>
-    <div class="row g-3">
-        <div class="col-md-6 mb-3" *ngFor="let opt of allOptions">
-            <div class="p-3 border rounded position-relative" [ngClass]="{'border-primary': isSelected(opt.key)}"
+
+
+    <div class="row">
+        <div class="col-12 col-lg-6" *ngFor="let opt of allOptions">
+            <div class="p-3 border rounded position-relative mb-3" [ngClass]="{'border-primary': isSelected(opt.key)}"
                 style="cursor: pointer;" (click)="toggleOption(opt.key)">
-                <div class="d-flex align-items-center gap-3">
-                    <img [src]="opt.icon" width="40" />
+                <div class="d-flex gap-3 flex-column align-items-start">
+                    <img [src]="opt.icon">
                     <div>
-                        <h6 class="mb-1">{{ opt.label }}</h6>
+                        <h5 class="mb-1">{{ opt.label }}</h5>
                         <p class="text-muted small mb-0">{{ opt.description }}</p>
                     </div>
                 </div>
@@ -41,7 +52,7 @@
         </app-show-errors>
     </div>
     <div class="mt-3">
-        <button class="btn btn-outline-primary" type="button" (click)="openCustomModal(customConditionModal)">Add New
+        <button class="btn btn-white" type="button" (click)="openCustomModal(customConditionModal)">Add New
             Custom
             Condition</button>
     </div>
