--- a/src/app/pages/dashboard/dashboard-list/dashboard-list.component.html
+++ b/src/app/pages/dashboard/dashboard-list/dashboard-list.component.html
@@ -1,14 +1,5 @@
 <div class="wrapper">
-  <nav class="navbar navbar-dark bg-dark d-lg-none">
-    <div class="container-fluid">
-      <!-- <a class="navbar-brand" href="#"><img src="assets/img/logo-red.png" alt="sprintexcode"></a> -->
-      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#responsiveSidebar">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-    </div>
-  </nav>
-
-  <!-- Main Wrapper -->
+<!-- Main Wrapper -->
   <div class="main-container">
     <div class="topbar">
       <h5 class="text-primary m-0">Dashboard</h5>
@@ -86,7 +77,7 @@
               </select>
             </div>
           </div>
-          <div class="d-flex gap-3">
+          <div class="d-flex gap-3 align-items-center">
             <button class="btn btn-primary">Submit</button>
             <button class="btn btn-white"><span><img src="assets/img/edit.png" class="pe-3"></span>Clear</button>
           </div>
