--- a/src/app/pages/sidebar/sidebar.component.html
+++ b/src/app/pages/sidebar/sidebar.component.html
@@ -1,3 +1,11 @@
+        <nav class="navbar navbar-dark bg-dark d-lg-none">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                    data-bs-target="#responsiveSidebar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            </div>
+        </nav>
 <!-- Offcanvas -->
 <div class="sidebar offcanvas offcanvas-start offcanvas-lg" tabindex="-1" id="responsiveSidebar">
   <div class="text-center py-4 d-none d-lg-block">
