--- a/src/assets/scss/base/_forms.scss
+++ b/src/assets/scss/base/_forms.scss
@@ -81,10 +81,10 @@ border:1px solid #E6EFF5;
     font-weight: $medium;
     font-size: 16px;
     letter-spacing: 0.3px;
-    padding: 2px 5px;
-    border: 0;
-    border-right: 1px solid #efefef;
-    background-color: transparent;
+    padding:2px 11px;
+     background-color: #e9ecef;
+     border-right: 1px solid #ced4da;
+    border: 1px solid #ced4da;
     margin-right: 10px;
   }
   input[type="text"] {
@@ -99,6 +99,16 @@ border:1px solid #E6EFF5;
     top: 50%;
     left: 15px;
     transform: translateY(-50%);
+}
+.form-check-input[type=checkbox]{
+   width: 20px;
+    height: 20px;
+}
+.form-check-input:checked {
+    background-color: #000000;
+    border-color: #000000;
+    width: 20px;
+    height: 20px;
 }
 // --login input css-
 .login-form {
