--- a/src/assets/scss/pages/select-service.scss
+++ b/src/assets/scss/pages/select-service.scss
@@ -55,16 +55,15 @@
 
 .upload-doc{
   .custom-file-upload {
-  display: inline-block;
+  display:flex;
   padding: 10px 20px;
   cursor: pointer;
   background-color: $white;
-  color: #000;
   border-radius: 5px;
-  font-weight: 500;
   border: 1px solid $gray4;
   width: 100%;
-  position: relative;
+    align-items: center;
+    gap: 9px;
 }
 .custom-file-upload:hover {
   background-color: $gray4;
@@ -74,8 +73,8 @@ position: absolute;
     opacity: 0;
     z-index: 9;
     width: 100%;
-    // height: 100%;
-    // top:0
+    height: 100%;
+    top:0
 }
 
 }
