--- a/src/app/shared/components/loader/loader.component.html
+++ b/src/app/shared/components/loader/loader.component.html
@@ -2,7 +2,7 @@
     <div class="loader">
         <div class="loader-content">
             <div class="text-primary align-self-center loader-lg">
-                <img src="assets/assets/img/ifmsgif.gif" width="200px">
+                <img src="assets/img/NXT_logo_gif.gif" width="200px">
             </div>
         </div>
     </div>
