--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@ textarea[readonly] {
   color:#808080;
   cursor: not-allowed;
       font-weight: 400;
+          background: #ece8e8;
 }/* You can add global styles to this file, and also import other style files */
 
 .floating-label.fltLbValid label {
