--- a/src/app/pages/dashboard/dashboard-list/dashboard-list.component.html
+++ b/src/app/pages/dashboard/dashboard-list/dashboard-list.component.html
@@ -1,14 +1,42 @@
 <div class="wrapper">
-<!-- Main Wrapper -->
+  <!-- Main Wrapper -->
   <div class="main-container">
+
     <div class="topbar">
-      <h5 class="text-primary m-0">Dashboard</h5>
+      <div class="container-fluid">
+        <div class="d-flex justify-content-between align-items-center">
+          <h5 class="text-primary m-0">Dashboard</h5>
+          <ul class="navbar-item d-flex align-items-center mb-0 gap-3">
+            <li><div class="position-relative"><i class="fa-regular fa-bell"></i><span class="badge-notification">0</span></div></li>
+            <li>
+              <div class="dropdown profile">
+                    <button type="button" data-toggle="dropdown"
+                class="btn m-0 p-0 border-0 d-flex align-items-center gap-2" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+                <span class="name-label">M</span>
+                <div class="text-start m-0">
+                  <p class="text-primary m-0"><strong>matlab pvt ltd</strong></p>
+                  <h6 class="text-start m-0">NXT764944</h6>
+                </div>
+                <i class="fas fa-chevron-down ms-2"></i>
+              </button>
+              <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
+    <li><a class="dropdown-item active" href="#">Action</a></li>
+    <li><a class="dropdown-item" href="#">Another action</a></li>
+    <li><a class="dropdown-item" href="#">Something else here</a></li>
+  </ul>
+              </div>
+          </li>
+          </ul>
+        </div>
+
+      </div>
     </div>
     <div class="content-inside m-3">
       <h3 class="text-primary py-3">Welcome Parthiv Patel</h3>
       <div class="notification">
         <div><img src="assets/img/notification.png" alt="sprintexcode"></div>
-        <p class="mb-0">A new beneficiary has been added/linked. Please begin the process by clicking on the draft card below. or <a href="#">Click Here To Start.</a></p>
+        <p class="mb-0">A new beneficiary has been added/linked. Please begin the process by clicking on the draft card
+          below. or <a href="#">Click Here To Start.</a></p>
       </div>
       <div class="row">
         <div class="col-12 col-lg-6">
@@ -43,8 +71,8 @@
 
       <div class="filter-box d-flex gap-4 p-3 mt-3">
         <h4>Filter</h4>
-        <form class="d-flex justify-content-between align-items-center w-100">
-          <div class="d-flex gap-3">
+        <form class="d-flex justify-content-between align-items-center w-100 flex-wrap">
+          <div class="d-flex gap-3 flex-wrap mb-2">
             <div>
               <input type="date" class="form-control" id="exampleInputPassword1">
             </div>
@@ -86,42 +114,42 @@
 
       </div>
       <div class="d-flex justify-content-between my-3">
-           <h5 class="mt-3 text-primary">Your Escrow Deposits</h5>
-           <button class="btn btn-primary" (click)="addNew()">Add New</button>
+        <h5 class="mt-3 text-primary">Your Escrow Deposits</h5>
+        <button class="btn btn-primary" (click)="addNew()">Add New</button>
       </div>
-   
+
       <div class="deposit-table mt-3">
         <table class="table">
           <thead>
-          <tr>
-            <th scope="col">Escrow ID: <span class="fw-normal">ABCD4564</span></th>
-            <th scope="col" colspan="7">User Type: <span class="fw-normal">Depositor</span></th>
-          </tr>
+            <tr>
+              <th scope="col">Escrow ID: <span class="fw-normal">ABCD4564</span></th>
+              <th scope="col" colspan="7">User Type: <span class="fw-normal">Depositor</span></th>
+            </tr>
           </thead>
           <tbody>
-          <tr>
-            <th>Depositor Company Name</th>
-            <th>Depositor Representative Name</th>
-            <th>Beneficiary Company Name</th>
-            <th>Beneficiary Representative Name</th>
-            <th>Type of Escrow</th>
-            <th>Stage</th>
-            <th>Action</th>
-          </tr>
-          <tr>
-            <td>ACME Inc</td>
-            <td>Parthiv Patel</td>
-            <td>PaySprint</td>
-            <td>Shubham Bhola</td>
-            <td>Software/SaaS</td>
-            <td>Escrow Activation</td>
-            <td>
-              <div class="d-flex gap-3">
-                <div><img src="assets/img/edit2.png"></div>
-                <div><img src="assets/img/view.png"></div>
-              </div>
-            </td>
-          </tr>
+            <tr>
+              <th>Depositor Company Name</th>
+              <th>Depositor Representative Name</th>
+              <th>Beneficiary Company Name</th>
+              <th>Beneficiary Representative Name</th>
+              <th>Type of Escrow</th>
+              <th>Stage</th>
+              <th>Action</th>
+            </tr>
+            <tr>
+              <td>ACME Inc</td>
+              <td>Parthiv Patel</td>
+              <td>PaySprint</td>
+              <td>Shubham Bhola</td>
+              <td>Software/SaaS</td>
+              <td>Escrow Activation</td>
+              <td>
+                <div class="d-flex gap-3">
+                  <div><img src="assets/img/edit2.png"></div>
+                  <div><img src="assets/img/view.png"></div>
+                </div>
+              </td>
+            </tr>
           </tbody>
 
         </table>
@@ -131,8 +159,3 @@
 
   </div>
 </div>
-
-
-
-
-
