--- a/src/app/pages/sidebar/sidebar.component.html
+++ b/src/app/pages/sidebar/sidebar.component.html
@@ -15,7 +15,7 @@
     <h5 class="offcanvas-title">
       <img src="assets/img/logo-red.png" alt="Logo">
     </h5>
-    <button  type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close">☰ Menu</button>
+    <button  type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
   </div>
   <div class="offcanvas-body">
     <ul class="nav flex-column w-100">
